--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,su
 }
 
 html {
-	background: #141414;
+	background: initial;
 }
 
 body {
@@ -18,6 +18,7 @@ body {
 	background-color: var(--color-bg);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow:hidden;
 }
 
 /* Color schemes */
@@ -684,29 +685,37 @@ main {
 
 
 @media only screen and (max-width: 1100px) {
+
+	.menu {
+	margin: -60vw 0 0 0vw;
+
+}
 	.slider{
 	width: 80% !important;
+	top: 60%;
 	left: 10%;
 	margin: initial auto;
-	margin-top: 100px !important;
 	  }  
 
-	  .item-1, 
+.item-1, 
 .item-2, 
 .item-3,
 .item-4, 
 .item-5, 
 .item-6 {
 	width: 100% !important;
-	top: 100% !important;
 	text-align: justify;
-	
+	padding: 0 10px;
 }
 
 
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 888px){
+	body{
+		overflow-x: hidden !important;
+		overflow-y: scroll;
+	}
 	.content--fixed{
 		opacity: 0;
 	}
@@ -714,7 +723,7 @@ main {
 		display: flex !important;
 		flex-direction: row;
 		position: relative;
-		font-size: 1.5rem;
+		font-size: 1rem;
 		letter-spacing: 1px !important;
 		font-weight: 700;
 		margin-bottom: -3%;
@@ -722,18 +731,48 @@ main {
 		z-index:1;
 	}
 
+	.slider{
+		width: 90% !important;
+		height: 100% !important;
+		top: 75% !important;
+		left: 5%;
+		right: 5%;
+		margin: initial auto;
+		overflow: hidden ;
+		padding: 30px 20px;
+		  } 
+
 	.item-1, 
 .item-2, 
 .item-3,
 .item-4, 
 .item-5, 
 .item-6 {
-	margin-top: 100px;
+	top: 65% !important;
+	margin-top: 0 !important;
 	
 }
 
-.menu {
-	margin: 0 0 0 25vw;
+.item-3, .item-6{
+	margin-top: -30px !important;
 }
+
+.menu {
+	margin: -45vw 0 0 0vw !important;
+
+}
+
+.menu__item,h2{
+	font-size: 1.5rem;
+}
+
+h2:first-child{
+	font-size: 1rem;
+}
+
+.underlined{
+	font-size: 1rem;
+}
+
 	
 }
