--- a/css/base.css
+++ b/css/base.css
@@ -297,7 +297,6 @@ main {
 	flex-direction: column;
 	margin: 0 0 0 25vw;
 	font-size: 4vw;
-	align-items: flex-start;
 }
 
 .menu__item {
@@ -310,11 +309,15 @@ main {
 	font-weight: 900;
 	display: flex;
 	flex-direction: row;
-	align-items: center;
-	justify-content: center;
+	/* align-items: center;
+	justify-content: center; */
+	text-align: left;
 	flex-wrap: wrap;
 	position: relative;
 	padding-bottom: 7px;
+	margin-top: -14%;
+	margin-left: 105px;
+	margin-bottom: 20px;
 }
 
 .menu__item:hover,
@@ -368,17 +371,27 @@ main {
     transform: scale3d(1.2,1,1);
 }
 
-.menu__span{
+.menu__span__group{
 	display: flex !important;
-	flex-direction: row;
+	flex-direction: column;
+	align-items:flex-end;
 	position: relative;
+	width: 100px;
 	font-size: 1.8vw;
 	letter-spacing: 1px !important;
 	font-weight: 700;
 	margin-bottom: -3%;
 	margin-top: 3%;
 	z-index:1;
+	text-align: right !important;
+	
+	/* text-align: right !important; */
+
 }
+
+/* .menu__span__group > span{
+	display: inline-block !important;
+} */
 
 
 
@@ -684,6 +697,7 @@ main {
 
 
 
+
 @media only screen and (max-width: 1100px) {
 
 	.menu {
@@ -719,22 +733,28 @@ main {
 	.content--fixed{
 		opacity: 0;
 	}
-	.menu__span{
-		display: flex !important;
+	.menu__span__group{
+		font-size: .7rem;
+	}
+
+	.menu__span__2{
+		/* display: flex !important;
 		flex-direction: row;
-		position: relative;
+		position: absolute;
 		font-size: 1rem;
 		letter-spacing: 1px !important;
 		font-weight: 700;
 		margin-bottom: -3%;
 		margin-top: 3%;
-		z-index:1;
+		z-index:1; */
 	}
+
+	
 
 	.slider{
 		width: 90% !important;
 		height: 100% !important;
-		top: 75% !important;
+		top: 130% !important;
 		left: 5%;
 		right: 5%;
 		margin: initial auto;
@@ -748,7 +768,7 @@ main {
 .item-4, 
 .item-5, 
 .item-6 {
-	top: 65% !important;
+	top: 75% !important;
 	margin-top: 0 !important;
 	
 }
@@ -758,8 +778,88 @@ main {
 }
 
 .menu {
-	margin: -45vw 0 0 0vw !important;
+	margin: -80px 0 0 0vw !important;
+	position: absolute !important;
+	top: 0% !important;
+}
 
+.menu__item {
+	margin-top: -10%;
+}
+
+
+.menu__item,h2{
+	font-size: 1.5rem;
+}
+
+h2:first-child{
+	font-size: 1rem;
+}
+
+.underlined{
+	font-size: 1rem;
+}
+
+	
+}
+
+
+@media only screen and (max-width: 400px){
+	body{
+		overflow-x: hidden !important;
+		overflow-y: scroll;
+	}
+	.content--fixed{
+		opacity: 0;
+	}
+	.menu__span__group{
+		font-size: .7rem;
+	}
+
+	.menu__span__2{
+		/* display: flex !important;
+		flex-direction: row;
+		position: absolute;
+		font-size: 1rem;
+		letter-spacing: 1px !important;
+		font-weight: 700;
+		margin-bottom: -3%;
+		margin-top: 3%;
+		z-index:1; */
+	}
+
+	
+
+	.slider{
+		width: 90% !important;
+		height: 100% !important;
+		top: 100% !important;
+		left: 5%;
+		right: 5%;
+		margin: initial auto;
+		overflow: hidden ;
+		padding: 30px 20px;
+		  } 
+
+	.item-1, 
+.item-2, 
+.item-3,
+.item-4, 
+.item-5, 
+.item-6 {
+	top: 75% !important;
+	margin-top: 0 !important;
+	
+}
+
+.item-3, .item-6{
+	margin-top: -30px !important;
+}
+
+.menu {
+	margin: -110px 0 0 0vw !important;
+	position: absolute !important;
+	top: 0% !important;
 }
 
 .menu__item,h2{
