--- a/css/base.css
+++ b/css/base.css
@@ -24,7 +24,7 @@ body {
 /* Color schemes */
 .demo-1 {
 	--color-text: #ededed;
-	--color-bg: #000;
+	--color-bg: #000000;
 	--color-link: #fff;
 	--color-link-hover: #5d5050;
 	--color-info: #5d5050;
@@ -116,6 +116,7 @@ main {
 
 .content {
 	position: relative;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -140,7 +141,6 @@ main {
 	left: 0;
 	display: grid;
 	align-content: space-between;
-	width: 100%;
 	max-width: none;
 	min-height: 0;
 	height: 100vh;
@@ -290,6 +290,32 @@ main {
 	fill-opacity: 0.6;
 }
 
+.top__link__icon{
+	position: absolute;
+	top: 5px;
+	width: 100%;
+	height: 20%;
+	z-index: 1000 !important;
+}
+
+.top__link__icon > ul{
+	display: flex;
+	justify-content:center;
+	z-index: 10000 !important;
+	padding-left: 0;
+}
+
+.top__link__icon > ul > li{
+	list-style: none;
+	padding: 8px 20px;
+}
+
+.top__link__icon > ul > li > a > img {
+	width: 2rem;
+	z-index: 10000 !important;
+
+}
+
 .menu {
 	position: relative;
 	z-index: 1000;
@@ -317,7 +343,7 @@ main {
 	padding-bottom: 7px;
 	margin-top: -14%;
 	margin-left: 105px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .menu__item:hover,
@@ -513,6 +539,7 @@ main {
 
   p {
 	  margin: 0;
+	  text-align: justify;
   }
   
   /*  Now that is interesting */
@@ -577,6 +604,7 @@ main {
 	min-height: 600px;
 	padding: 30px 30px;
 	border-radius: 10px;
+	overflow: hidden;
   }
 
 
@@ -698,10 +726,10 @@ main {
 
 
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1500px) {
 
 	.menu {
-	margin: -60vw 0 0 0vw;
+	margin: -40% 0 0 0vw;
 
 }
 	.slider{
@@ -709,6 +737,7 @@ main {
 	top: 60%;
 	left: 10%;
 	margin: initial auto;
+	
 	  }  
 
 .item-1, 
@@ -733,6 +762,22 @@ main {
 	.content--fixed{
 		opacity: 0;
 	}
+	.top__link__icon > ul > li{
+		list-style: none;
+		padding: 0px 20px;
+	}
+
+	.top__link__icon > ul > li > a{
+		min-width: 1.5rem;
+		max-width: 1.5rem;
+	}
+
+	.top__link__icon > ul > li > a > img {
+		min-width: 1.5rem;
+		max-width: 1.5rem;
+		z-index: 10000 !important;color: #00000000
+	}
+	
 	.menu__span__group{
 		font-size: .7rem;
 	}
@@ -778,7 +823,7 @@ main {
 }
 
 .menu {
-	margin: -80px 0 0 0vw !important;
+	margin: -70px 0 0 0vw !important;
 	position: absolute !important;
 	top: 0% !important;
 }
@@ -833,7 +878,7 @@ h2:first-child{
 	.slider{
 		width: 90% !important;
 		height: 100% !important;
-		top: 100% !important;
+		top: 113% !important;
 		left: 5%;
 		right: 5%;
 		margin: initial auto;
